--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ bin/day1/robot/Spiral.class
 bin/solutions/StarShowSolution.class
 
 bin/solutions/TriangleShellSolution.class
+
+src/day1/Tash Me/images/mustache.png
